samples/_failures_safe/1761041893_d1a4fb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_38e4ad5f.c: In function ‘main’:
./samples/SAFE/__tmp_38e4ad5f.c:160:5: error: expected expression at end of input
  160 |     } else if (choice ==
      |     ^
./samples/SAFE/__tmp_38e4ad5f.c:160:5: error: expected declaration or statement at end of input
